Deployment/k8sRedis.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels: 
    app: redis
    role: master
    tier: backend
spec:
  containers:
  - name: redis
    image: redis:latest
    ports:
    - containerPort: 6379
      name: redis
