Deployment/k8sDoployBackend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esdhbackend-deployment
  labels:
    app: esdhbackend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: esdhbackend
  template:
    metadata:
      labels:
        app: esdhbackend
    spec:
      containers:
        - name: esdhbackend
          image: kjcontaineres.azurecr.io/esdhdemo_backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5047
          env:                     # Environment variables passed to the container
            - name: Dania__RedisServer
              value: redis-master
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: esdhbackend
  ports:
    - port: 5047
      targetPort: 5047
