Deployment/k8sDployIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: k8s.kjsoft.dk
      http:
        paths:
          - path: /Api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5047
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
  tls:
    - hosts:
        - k8s.kjsoft.dk
      secretName: letsencrypt-production
  ingressClassName: nginx
